2002-06-30  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c (quit_app_cb): ask to save or cancel if the documents
	were changed.
	* src/ghex-window.c (ghex_window_close): the proper way to get rid of
	a GHexWindow. if this is the last view of a doc and the doc has
	changed, ask user whether to save the changes.
	(ghex_window_load): add/remove new/old document to/from the "Files"
	menu.
	(ghex_window_remove_doc_from_list): remove document name from the
	"Files" menu.
	(ghex_window_add_doc_to_list): add document name to the "Files" menu.
	(ghex_window_new): add all existing document to "Files" menu.
	* src/ui.c (close_cb): kill all views of the closed document.
	* src/hex-document.c (hex_document_finalize): release refs to all
	views.

2002-06-20  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c (add_view_cb, remove_view_cb): implemented.

2002-06-17  Jaka Mocnik  <jaka@gnu.org>

	* further de-MDI-zation; GHex is now semistable and MDI-less ;)
	* src/bonobo-mdi.*, src/ghex-mdi.[ch]: removed

2002-06-15  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.[ch]: a BonoboWindow descendant, hosting
	at most one GtkHex widget.
	* src/hex-document.[ch]: de-MDI-zing.
	* src/ui.c: likewise. use GHexWindow for displaying a single view.
	* src/main.c: likewise. use (GHexWindow)* instead of MDI.

2002-06-12 Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* src/findreplace.c: Fixes #84988
 
2002-06-08  Yanko Kaneti <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-05-29  Satyajit Kanungo  <satyajit.kanungo@wipro.com>

	Reviewed by Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/ui.c, src/preferences.c : Added error handling for help.
	* help/C/Makefile.am: Changed docname to ghex2.
	* Added ghex2.xml in help/C/

2002-05-22  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/hex-document.h: Added a new member 'gboolean insert' for struct
	HexChangeData.
	* src/hex-document.c (hex_document_set_byte), (hex_document_set_nibble),